--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
       <div class="hero-content">
         <div class="hero-content-info">
           <h1>Feel the taste of Japanese food</h1>
-          <p>Feel the taste of the most popular Japanese food from anywhere and anytime.</p>
+          <p>
+            Feel the taste of the most popular Japanese food from anywhere and
+            anytime.
+          </p>
 
           <div class="hero-content__buttons">
             <button class="hero-content__order-button">Order Now</button>
             <button class="hero-content__play-button">
-              <img src="assets/play-circle.svg" alt="play"/>
+              <img src="assets/play-circle.svg" alt="play" />
               How to Order
             </button>
           </div>
@@ -74,10 +77,37 @@
           </div>
 
           <div class="hero-content__review">
-            <img src="assets/user.png" alt="user"/>
-            <p>"This is the best Japanese food delivery service that ever existed."</p>
+            <img src="assets/user.png" alt="user" />
+            <p>
+              "This is the best Japanese food delivery service that ever
+              existed."
+            </p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="about-us" id="about-us">
+      <div class="about-us__image">
+        <div class="about-us__image-sushi3">
+          <img src="assets/sushi-3.png" alt="sushi"/>
+        </div>
+
+        <button class="about-us__button">
+          Learn More
+
+          <img src="assets/arrow-up-right.svg" alt="learn more"/>
+        </button>
+
+        <div class="about-us__image-sushi2">
+          <img src="assets/sushi-2.png" alt="sushi"/>
+        </div>
+      </div>
+
+      <div class="about-us__content">
+        <p class="sushi__subtitle">About Us / 私たちに関しては</p>
+        <h3 class="sushi__title">Our mission is to bring true Japanese flavours to you.</h3>
+        <p class="sushi__description">We will continue to provide the experience of Omotenashi, the Japanese mindset of hospitality, with our shopping and dining for our customers.</p>
       </div>
     </section>
 
