--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <section class="hero">
       <div class="hero-image">
-        <img src="assets/sushi-1.png" alt="sushi" />
-        <h2>
+        <img src="assets/sushi-1.png" alt="sushi" data-aos="fade-up"/>
+        <h2 data-aos="fade-up">
           日 <br />
           本 <br />
           食
@@ -54,7 +54,7 @@
       </div>
 
       <div class="hero-content">
-        <div class="hero-content-info">
+        <div class="hero-content-info" data-aos="fade-left">
           <h1>Feel the taste of Japanese food</h1>
           <p>
             Feel the taste of the most popular Japanese food from anywhere and
@@ -70,7 +70,7 @@
           </div>
         </div>
 
-        <div class="hero-content__testimonial">
+        <div class="hero-content__testimonial" data-aos="fade-up">
           <div class="hero-content__customer flex-center">
             <h4>24<span>k+</span></h4>
             <p>Happy Customers</p>
@@ -90,7 +90,7 @@
     <section class="about-us" id="about-us">
       <div class="about-us__image">
         <div class="about-us__image-sushi3">
-          <img src="assets/sushi-3.png" alt="sushi"/>
+          <img src="assets/sushi-3.png" alt="sushi-3" data-aos="fade-right"/>
         </div>
 
         <button class="about-us__button">
@@ -100,11 +100,11 @@
         </button>
 
         <div class="about-us__image-sushi2">
-          <img src="assets/sushi-2.png" alt="sushi"/>
+          <img src="assets/sushi-2.png" alt="sushi" data-aos="fade-right"/>
         </div>
       </div>
 
-      <div class="about-us__content">
+      <div class="about-us__content" data-aos="fade-left">
         <p class="sushi__subtitle">About Us / 私たちに関しては</p>
         <h3 class="sushi__title">Our mission is to bring true Japanese flavours to you.</h3>
         <p class="sushi__description">We will continue to provide the experience of Omotenashi, the Japanese mindset of hospitality, with our shopping and dining for our customers.</p>
@@ -112,9 +112,9 @@
     </section>
 
     <section class="popular-foods" id="menu">
-      <h2 class="popular-foods__title">Popular Food / 人気</h2>
+      <h2 class="popular-foods__title" data-aos="flip-up">Popular Food / 人気</h2>
 
-      <div class="popular-foods__filters sushi__hide-scrollbar">
+      <div class="popular-foods__filters sushi__hide-scrollbar" data-aos="fade-up">
         <button class="popular-foods__filter-btn active">All</button>
         <button class="popular-foods__filter-btn">
           <img src="/assets/sushi-9.png" alt="sushi9"/>Sushi
@@ -130,7 +130,7 @@
         </button>
       </div>
 
-      <div class="popular-foods__catalogue">
+      <div class="popular-foods__catalogue"  data-aos="fade-up">
         <article class="popular-foods__card">
           <img class="popular-foods__card-image" src="assets/sushi-12.png" alt="sushi12"/>
           <h4 class="popular-foods__card-title">Chezu Sushi</h4>
